General Profile Page complete

--- a/uote/profile.html
+++ b/uote/profile.html
@@ -421,7 +421,7 @@
         </ol>
     </section>
     <!-- Main content -->
-    <section class="content invoice">
+    <section class="content">
         <!-- title row -->
         <div class="row">
             <div class="col-xs-12">
